# qualito

./: .gitignore  LICENSE  README.md  env.example  pyproject.toml
docs/: getting-started.md  privacy.md
src/qualito/: __init__.py  cloud.py  config.py  importer.py
src/qualito/cli/: main.py  migrate.py
src/qualito/core/: __init__.py  benchmark.py  db.py  dqi.py  evaluator.py  feedback_loop.py  incident_detector.py  measure.py  pattern_detector.py  recommendations.py  secret_scanner.py  state_machines.py  stream_parser.py
src/qualito/mcp/: server.py
tests/: test_cli_audit.py  test_cli_costs.py  test_cli_privacy.py  test_cli_sync.py  test_cloud_filter.py  test_config.py  test_global.py  test_sa_crud.py  test_sa_tables.py  test_secret_scanner.py  test_smoke.py
