[project]
name = "dqi"
version = "0.1.0"
description = "Delegation Quality Index — measure and improve AI agent delegation quality"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Mattia Papa" },
]
keywords = ["ai", "claude", "delegation", "quality", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1,<8.3.2",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0,<1.27",
    "uvicorn>=0.31,<0.43",
]
dashboard = [
    "fastapi>=0.115,<0.135.3",
    "uvicorn>=0.31,<0.43",
    "jinja2>=3.1",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "stripe>=7.0,<15.0.1",
    "charset-normalizer>=3.0,<3.4.7",
    "email-validator>=2.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4,<0.15.9",
]

[project.scripts]
dqi = "dqi.cli.main:cli"
dqi-mcp = "dqi.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dqi"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
