[project]
name = "qualito"
version = "0.1.1"
description = "Quality metrics for AI-assisted development — measure and improve your Claude Code sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Mattia Papa" },
]
keywords = ["ai", "claude", "delegation", "quality", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1,<8.3.2",
    "sqlalchemy>=2.0",
]

[project.urls]
Homepage = "https://qualito.ai"
Repository = "https://github.com/mp-web3/qualito"
Issues = "https://github.com/mp-web3/qualito/issues"

[project.optional-dependencies]
mcp = [
    "mcp>=1.0,<1.27",
    "uvicorn>=0.31,<0.43",
]
postgres = [
    "psycopg2-binary>=2.9",
]
dashboard = [
    "fastapi>=0.115,<0.135.3",
    "uvicorn>=0.31,<0.43",
    "jinja2>=3.1",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "stripe>=7.0,<15.0.1",
    "charset-normalizer>=3.0,<3.4.7",
    "email-validator>=2.0",
    "psycopg2-binary>=2.9",
]
all = [
    "qualito[mcp]",
    "qualito[dashboard]",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4,<0.15.9",
    "httpx>=0.27",
]

[project.scripts]
qualito = "qualito.cli.main:cli"
qualito-mcp = "qualito.mcp.server:main"
qualito-migrate = "qualito.cli.migrate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qualito"]
exclude = [
    "src/qualito/dashboard/frontend/node_modules",
    "src/qualito/dashboard/frontend/src",
    "src/qualito/dashboard/frontend/.svelte-kit",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "src/qualito/dashboard/frontend/node_modules",
    "src/qualito/dashboard/frontend/.svelte-kit",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
