[project]
name = "qualito"
version = "0.1.13"
description = "Quality metrics for Claude Code sessions — score, track, and improve."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Mattia Papa" },
]
keywords = ["ai", "claude", "claude-code", "quality", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1,<8.3.2",
    "sqlalchemy>=2.0",
]

[project.urls]
Homepage = "https://qualito.ai"
Repository = "https://github.com/mp-web3/qualito"
Issues = "https://github.com/mp-web3/qualito/issues"

[project.optional-dependencies]
mcp = [
    "mcp>=1.0,<1.27",
    "uvicorn>=0.31,<0.43",
]
postgres = [
    "psycopg2-binary>=2.9",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4,<0.15.9",
    "httpx>=0.27",
]

[project.scripts]
qualito = "qualito.cli.main:cli"
qualito-mcp = "qualito.mcp.server:main"
qualito-migrate = "qualito.cli.migrate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Implicit namespace package: no src/qualito/__init__.py so the `qualito`
# namespace can be extended by other packages (e.g. internal qualito-cloud
# providing qualito.dashboard).
[tool.hatch.build.targets.wheel]
packages = ["src/qualito"]

[tool.hatch.build.targets.sdist]
include = ["src/qualito", "docs", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
